ibon-poc/k8s/deploy-istio.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ibonpoc
    version: v1
  name: ibonpoc-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ibonpoc
      version: v1
  strategy: {}
  template:
    metadata:
      labels:
        app: ibonpoc
        version: v1
    spec:
      serviceAccountName: ibonpoc
      containers:
      - image: yellow456434/ibonpoc:v1.1
        name: ibonpoc
        ports:
          - containerPort: 80
            name: http
        volumeMounts:
        - name: config
          mountPath: /ibon-poc/appsettings.json
          subPath: appsettings.json
        - name: secret
          mountPath: /ibon-poc/secret.json
          subPath: secret.json
      volumes:
      - name: config
        configMap:
          name: ibon-poc-configmap
      - name: secret
        secret:
          secretName: ibon-poc-secret
