ibon-poc/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ibonpoc
    version: v1
  name: ibonpoc-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ibonpoc
      version: v1
  strategy: {}
  template:
    metadata:
      annotations:
        up: "2"
      labels:
        app: ibonpoc
        version: v1
    spec:
      containers:
      - image: yellow456434/ibonpoc:v1.6
        name: ibonpoc
        ports:
          - containerPort: 5000
            name: http
        volumeMounts:
        - name: config
          mountPath: /ibon-poc/Configs/
        - name: secret
          mountPath: /ibon-poc/Secrets/
      volumes:
      - name: config
        configMap:
          name: ibon-poc-configmap
          items:
          -  key: appsettings.json
             path: appsettings.json
      - name: secret
        secret:
          secretName: ibon-poc-secret
          items:
          -  key: secret.json
             path: secret.json
