ibon-poc/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ibonpoc
    service: ibonpoc
  name: ibonpoc
spec:
  ports:
  - name: http
    port: 801
    protocol: TCP
    targetPort: 5000
  selector:
    app: ibonpoc
  type: ClusterIP
