ibon-poc/k8s/hotsale-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hotsale-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hotsale
spec:
  hosts:
  - "*"
  gateways:
  - hotsale-gateway
  http:
  - match:
    - uri:
        prefix: /hotsale
    route:
    - destination:
        host: ibonpoc
        port:
          number: 801
